--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -10,8 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content" >
 
         <!-- DATOS RECUPERADOS -->
         <LinearLayout
@@ -182,8 +181,8 @@
             <Button
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
-                android:text="ACTUALIZAR DATOS"
-                android:onClick="actualizardata"
+                android:text="VOLVER"
+                android:onClick="volver"
                 >
 
             </Button>
